--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   bloc: ^8.0.1
   get_it: ^7.2.0
   json_annotation: ^4.4.0
+  shared_preferences: ^2.2.1
+  sqflite: ^2.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
