--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   json_annotation: ^4.4.0
   shared_preferences: ^2.2.1
   sqflite: ^2.3.0
-
+  sqflite_common:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
