--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   shared_preferences: ^2.2.1
   sqflite: ^2.3.0
   sqflite_common:
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +58,7 @@ dev_dependencies:
   flutter_gen_runner: any
   injectable_generator: any
   mocktail: ^1.0.0
+  sqflite_common_ffi:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
