--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dio: ^5.3.2
   equatable: ^2.0.3
   bloc: ^8.0.1
+  flutter_bloc:
   get_it: ^7.2.0
   json_annotation: ^4.4.0
   shared_preferences: ^2.2.1
@@ -41,6 +42,9 @@ dependencies:
   firebase_core:
   firebase_auth:
   cloud_firestore:
+  go_router:
+  freezed_annotation:
+  freezed:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,11 +58,13 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: any
+  bloc_test:
   build_runner: any
   flutter_gen_runner: any
   injectable_generator: any
-  mocktail: ^1.0.0
+  mockito:
   sqflite_common_ffi:
+  flutter_gen:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
